--- a/Ville/index.html
+++ b/Ville/index.html
@@ -19,10 +19,10 @@
     <h1>Smuggling simulator</h1>
 </header>
 
-<main>
     <div id="start">
-        <img id="startPic" src="/Ville/kuvat/smugg.png" alt="background image">
     </div>
+<main>
+    <img id="startPic" src="./kuvat/smugg.png" alt="background image">
 
     <dialog id="popup"></dialog>
 </main>
