--- a/Ville/End/lose.html
+++ b/Ville/End/lose.html
@@ -16,13 +16,13 @@
 
 <header>
     <h1>Smuggling simulator</h1>
-    <h2>YOU HAVE LOST THE GAME SLICKY HANDS SAMMY</h2>
+    <h2 id="losetext">YOU HAVE LOST THE GAME SLICKY HANDS SAMMY</h2>
 </header>
 
 <main>
 
     <div id="start">
-        <img id="startPic" src="/Ville/kuvat/smugg.png" alt="background image">
+        <a href="../index.html"><img id="startPic" src="../kuvat/smugg.png" alt="background image"></a>
     </div>
 
     <dialog id="popup"></dialog>
