--- a/Ville/game/thegame.html
+++ b/Ville/game/thegame.html
@@ -18,6 +18,7 @@
 <div class="container">
 <header>
     <h1>Smuggling simulator</h1>
+    <h2 id="totalmoney">Current balance: 0€</h2>
 </header>
 <main>
     <div id="game">
