- Saldo näkyviin kokoaikaisesti, testattu että myynti koodi toimii. Sivupäivittyy vieläkin, kun koittaa ostaa ja sekoittaa pelin. - Prosentit tuotteisiin -Refresh bugi korjattu, kauppa toimii -Lisätty reset kun aloittaa uuden pelin

--- a/Ville/End/lose.html
+++ b/Ville/End/lose.html
@@ -22,7 +22,7 @@
 <main>
 
     <div id="start">
-        <a href="../index.html"><img id="startPic" src="../kuvat/smugg.png" alt="background image"></a>
+        <a onclick="reset()" href="../index.html"><img id="startPic" src="../kuvat/smugg.png" alt="background image"></a>
     </div>
 
     <dialog id="popup"></dialog>
