--- a/Ville/game/thegame.html
+++ b/Ville/game/thegame.html
@@ -19,6 +19,7 @@
 <header>
     <h1>Smuggling simulator</h1>
     <h2 id="totalmoney">Current balance: 0€</h2>
+    <h2 id="currentlocation">Current location: </h2>
 </header>
 <main>
     <div id="game">
