--- a/Ville/End/lose.html
+++ b/Ville/End/lose.html
@@ -24,6 +24,7 @@
     <div id="start">
         <a onclick="reset()" href="../index.html"><img id="startPic" src="../kuvat/smugg.png" alt="background image"></a>
     </div>
+    <div id="leaderboard"></div>
 
     <dialog id="popup"></dialog>
 </main>
