--- a/Ville/End/lose.html
+++ b/Ville/End/lose.html
@@ -19,15 +19,16 @@
     <h2 id="losetext">YOU HAVE LOST THE GAME SLICKY HANDS SAMMY</h2>
 </header>
 
-<main>
 
-    <div id="start">
+    <!--<div id="start">
         <a onclick="reset()" href="../index.html"><img id="startPic" src="../kuvat/smugg.png" alt="background image"></a>
+    </div>-->
+    <div id="leaderboard"><h2>TOP 10 SMUGGLER GODS: </h2></div>
+    <div id="start">
+        <button onclick="reset()" href="../index.html">Play again</button>
     </div>
-    <div id="leaderboard"></div>
 
     <dialog id="popup"></dialog>
-</main>
 <footer>
     <p>2022</p>
     <p>Mikael Koivisto, Ville Laurikainen, Joona Loukkola, Henri Lyyjynen</p>
