--- a/Ville/End/lose.html
+++ b/Ville/End/lose.html
@@ -25,7 +25,7 @@
     </div>-->
     <div id="leaderboard"><h2>TOP 10 SMUGGLER GODS: </h2></div>
     <div id="start">
-        <button onclick="reset()" href="../index.html">Play again</button>
+        <a onclick="reset()" href="../index.html"><button>Play again</button></a>
     </div>
 
     <dialog id="popup"></dialog>
